[released #166603257] an anchor is getting added for the connection of the pages and also due to a question which has been skipped accidently.code

--- a/welcome/index.html
+++ b/welcome/index.html
@@ -25,6 +25,7 @@ Password           <input text="password" type="password" placeholder=" password
 						<input text="text" placeholder="Username" required></br>
 						<button>Recover the password</button>
                         <h3>Get back on our <a href="./index2.html">home</a> page</h3>
+                        <a href="../home/home.html" >shortcut</a>
 					</form>
             </div>
         </div>
